remove duplicate contact id

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -45,7 +45,7 @@
                     {% include "patterns/organisms/programme_tabs/apply.html" %}
                 </div>
 
-                <section class="section bg bg--light" id="contact">
+                <section class="section bg bg--light">
                     <span class="contact-anchor" id="contact"></span>
                     <div class="section__container">
                         {% include "patterns/organisms/contact/contact.html" with heading=page.contact_title text=page.contact_text image=page.contact_image link_href=page.contact_link_url link_text=page.contact_link_text %}
