--- a/rca/project_styleguide/templates/patterns/molecules/accordion/accordion.html
+++ b/rca/project_styleguide/templates/patterns/molecules/accordion/accordion.html
@@ -3,7 +3,7 @@
     <a
         href="#"
         role="tab"
-        class="accordion__link {% if accordion.preview_text %}accordion__link--with-preview{% endif %}"
+        class="accordion__link {% if preview %}accordion__link--with-preview{% endif %}"
         data-accordion-question
         aria-controls="answer-{{ forloop.counter }}"
         aria-expanded="false"
@@ -13,7 +13,7 @@
     >
         <h5 class="accordion__heading heading heading--five">{{ accordion.heading }}</h5>
         <div class="accordion__meta">
-            {% if accordion.preview_text %}
+            {% if preview %}
                 <p class="accordion__preview-text body body--one">{{accordion.preview_text}}</p>
             {% endif %}
             <svg width="18px" height="18px" class="accordion__icon accordion__icon--plus" aria-hidden="true">
