--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -53,6 +53,7 @@
 @import 'components/nav';
 @import 'components/news';
 @import 'components/overview';
+@import 'components/outdated-banner';
 @import 'components/page';
 @import 'components/pathways';
 @import 'components/pathway-item';
