Lazyloading slide images

--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero.html
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero.html
@@ -13,5 +13,6 @@
                         (min-width: 1023px) 1440px"
                  src="{{ imageLarge.url }}"
                  alt="{{ imageLarge.alt }}"
-                 class="hero__image">
+                 class="hero__image"
+                >
 </div>
