--- a/rca/project_styleguide/templates/patterns/molecules/slide/slide.html
+++ b/rca/project_styleguide/templates/patterns/molecules/slide/slide.html
@@ -5,7 +5,7 @@
     {% image slide.image fill-100x71 as imageSmall %}
     {% image slide.image fill-829x585 as imageLarge %}
 
-    {% include "patterns/atoms/image/image--lazyload.html" with imageSmall=imageSmall imageLarge=imageLarge classList='slide__image' %}
+    {% include "patterns/atoms/image/image--lazyload.html" with imageSmall=imageSmall width=829 height=585 imageLarge=imageLarge classList='slide__image' %}
 
     <div class="slide__meta">
         <h2 class="slide__heading">{{ slide.title }}</h2>
