add accordion with preview to the curriculum tab and adjust spacing accordingly

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
@@ -2,10 +2,14 @@
     {% include "patterns/organisms/curriculum-intro/curriculum-intro.html" %}
 </section>
 
-<section class="section section--end bg bg--light">
+<section class="section bg bg--light">
     <div class="section__notch section__notch--top">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
     {% include "patterns/molecules/heading-with-text/heading-with-text.html" %}
-    {% include "patterns/organisms/accordion-block/accordion-block.html" %}
+    {% include "patterns/organisms/accordion-block/accordion-block.html" with preview=True title=False %}
+</section>
+
+<section class="section section--end bg bg--light">
+    {% include "patterns/organisms/accordion-block/accordion-block.html" with modifier="accordion-block--last" %}
 </section>
