--- a/rca/project_styleguide/templates/patterns/organisms/accordion-block/accordion-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/accordion-block/accordion-block.html
@@ -1,4 +1,4 @@
-<div class="accordion-block" role="tablist" aria-multiselectable="true">
+<div class="accordion-block {% if modifier %}{{modifier}}{% endif %}" role="tablist" aria-multiselectable="true">
     {% if title %}
         <div class="grid">
             <h4 class="accordion-block__heading heading heading--four">{{title}}</h4>
@@ -6,7 +6,7 @@
     {% endif %}
     <div class="grid">
         {% for accordion in accordions %}
-            {% include "patterns/molecules/accordion/accordion.html" %}
+            {% include "patterns/molecules/accordion/accordion.html" with preview=preview %}
         {% endfor %}
     </div>
 </div>
