Changing theme classes to theme-light theme-dark

--- a/rca/static_src/sass/components/_audience-nav-item.scss
+++ b/rca/static_src/sass/components/_audience-nav-item.scss
@@ -17,7 +17,7 @@
     }
 
     .bg--light &,
-    .header-content-dark .header & {
+    .theme-dark .header & {
         #{$root}__link {
             color: $color--link-lightbg;
         }
@@ -28,7 +28,7 @@
     }
 
     .bg--dark &,
-    .header-content-light .header &,
+    .theme-light .header &,
     .headroom--pinned.headroom--not-top .header & {
         #{$root}__link {
             color: $color--link-darkbg;
