--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -281,14 +281,14 @@
         }
     }
 
-    .header-content-light & {
+    .theme-light & {
         #{$root}__search-toggle,
         #{$root}__menu-toggle {
             color: $color--white;
         }
     }
 
-    .header-content-dark & {
+    .theme-dark & {
         #{$root}__search-toggle,
         #{$root}__menu-toggle {
             color: $color--black;
