--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -24,7 +24,7 @@
         {% block extra_css %}{% endblock %}
     </head>
 
-    <body class="app {% block body_class %}app--{{ page.get_verbose_name|slugify }}{% endblock %} {% block header_class %}header-content-light{% endblock %}">
+    <body class="app {% block body_class %}app--{{ page.get_verbose_name|slugify }}{% endblock %} {% block header_class %}theme-light{% endblock %}">
         {% block body_top %}{% endblock %}
 
         {% include "patterns/molecules/outdated-banner/outdated-banner.html" %}
