--- a/rca/project_styleguide/templates/patterns/organisms/header/header.html
+++ b/rca/project_styleguide/templates/patterns/organisms/header/header.html
@@ -1,5 +1,5 @@
 {% load wagtailcore_tags navigation_tags %}
-<div class="header header--dark-bg"> {# modifier needs to be set by BE #}
+<div class="header">
 
     <div class="header__container grid">
 
