--- a/rca/static_src/sass/components/_search-toggle.scss
+++ b/rca/static_src/sass/components/_search-toggle.scss
@@ -30,7 +30,7 @@
         }
     }
 
-    .header-content-dark & {
+    .theme-dark & {
         #{$root}__label {
             color: $color--black;
         }
@@ -40,7 +40,7 @@
         }
     }
 
-    .header-content-light &,
+    .theme-light &,
     .headroom--pinned.headroom--not-top &,
     .app__navigation & {
         #{$root}__label {
