--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -61,6 +61,7 @@
 @import 'components/related-content';
 @import 'components/responsive-object';
 @import 'components/rich-text';
+@import 'components/scroll';
 @import 'components/search';
 @import 'components/search-toggle';
 @import 'components/section';
