--- a/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
+++ b/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
@@ -53,6 +53,10 @@
         <path d="M2.91892 5.83333L-7.15256e-07 8.83333L1.13513 10L6 5L1.13513 2.38419e-07L-7.15256e-07 1.16667L2.91892 4.16667L3.58419 5L2.91892 5.83333Z"/>
     </symbol>
 
+    <symbol id="thin-chevron" viewBox="0 0 19 18">
+        <path d="M18 8.5L9.5 17 1 8.5"/>
+    </symbol>
+
     <symbol id="play-icon" viewBox="0 0 24 25" fill="none">
         <path d="M12 0.320312C5.4 0.320312 0 5.72031 0 12.3203C0 18.9203 5.4 24.3203 12 24.3203C18.6 24.3203 24 18.9203 24 12.3203C24 5.72031 18.6 0.320312 12 0.320312ZM9.6 17.7203V6.92031L16.8 12.3203L9.6 17.7203Z" fill="white"/>
     </symbol>
