add stat block and get layout working across the viewports

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -70,6 +70,7 @@
 @import 'components/staff-detail';
 @import 'components/staff-overview';
 @import 'components/step-item';
+@import 'components/stat-block';
 @import 'components/steps';
 @import 'components/tabs';
 @import 'components/tab-item';
