--- a/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
@@ -1,4 +1,6 @@
-<a class="link link--primary link--link" href="{{value.href}}">
-    <span class="link__label">{{ value.text }}</span>
-    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
-</a>
+{% if href and text %}
+    <a class="link link--primary link--link" href="{{href}}">
+        <span class="link__label">{{ text }}</span>
+        <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+    </a>
+{% endif %}
