--- a/rca/project_styleguide/templates/patterns/molecules/accordion/accordion.html
+++ b/rca/project_styleguide/templates/patterns/molecules/accordion/accordion.html
@@ -12,8 +12,9 @@
         id="question-{{ forloop.counter }}"
     >
         <h5 class="accordion__heading heading heading--five">{{ accordion.heading }}</h5>
+
         <div class="accordion__meta">
-            {% if preview %}
+            {% if accordion.preview_text %}
                 <p class="accordion__preview-text body body--one">{{accordion.preview_text}}</p>
             {% endif %}
             <svg width="18px" height="18px" class="accordion__icon accordion__icon--plus" aria-hidden="true">
@@ -35,8 +36,8 @@
         aria-hidden="false">
         <div class="accordion__content-container">
             {{ accordion.body|richtext }}
-            {% if accordion.link %}
-                {% include "patterns/atoms/link-primary/link-primary--link.html" %}
+            {% if accordion.link.url and accordion.link.title %}
+                {% include "patterns/atoms/link-primary/link-primary--link.html" with href=accordion.link.url  text=accordion.link.title %}
             {% endif %}
         </div>
     </div>
