--- a/rca/project_styleguide/templates/patterns/organisms/curriculum-intro/curriculum-intro.html
+++ b/rca/project_styleguide/templates/patterns/organisms/curriculum-intro/curriculum-intro.html
@@ -1,7 +1,7 @@
 
 <div class="curriculum-intro">
     <div class="section__row grid">
-        <h2 class="curriculum-intro__heading heading heading--two">{{heading}}</h2>
+        <h2 class="curriculum-intro__heading heading heading--two">{{page.title}} curriculum</h2>
     </div>
     <div class="section__row grid">
         {% include "patterns/molecules/image-caption-link/image-caption-link.html" with modal=True %}
