--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -33,8 +33,9 @@
                     {% include "patterns/organisms/programme_tabs/programme_overview.html" %}
                 </div>
                 <div class="tabs__panel tabs__panel--hidden js-tab-panel" id="tab-panel-curriculum" role="tabpanel" aria-labelledby="curriculum">
-                    {% include "patterns/organisms/programme_tabs/curriculum.html" %}
+                    {% include "patterns/organisms/programme_tabs/curriculum.html" with curriculum_image=page.curriculum_image subheading=page.curriculum_subtitle copy=page.curriculum_text caption=page.curriculum_video_caption video=page.curriculum_video %}
                 </div>
+
                 <div class="tabs__panel tabs__panel--hidden js-tab-panel" id="tab-panel-requirements" role="tabpanel" aria-labelledby="requirements">
                     {% include "patterns/organisms/programme_tabs/requirements.html" %}
                 </div>
