Make alumni name link not required

--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -6,7 +6,11 @@
     <div class="featured-alumni__body">
         <ul class="featured-alumni__list">
             {% for link in alumni_links %}
+            {% if link.value.link %}
                 <li><a href="{{link.value.link}}">{{link.value.name}}</a></li>
+            {% else %}
+                <li>{{link.value.name}}</li>
+            {% endif %}
             {% endfor %}
         </ul>
     </div>
