--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -43,6 +43,7 @@
 @import 'components/heading';
 @import 'components/heading-with-text';
 @import 'components/hero';
+@import 'components/hero-action-pane';
 @import 'components/icon';
 @import 'components/image';
 @import 'components/image-caption-link';
