--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail--dark.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail--dark.html
@@ -1,2 +1,2 @@
 {% extends "patterns/pages/programmes/programme_detail.html" %}
-{% block header_class %}header-content-dark{% endblock %}
+{% block header_class %}theme-dark{% endblock %}
