--- a/rca/static_src/sass/components/_page.scss
+++ b/rca/static_src/sass/components/_page.scss
@@ -16,6 +16,20 @@
         }
     }
 
+    &--overlay {
+        @include z-index(overlap);
+        position: relative;
+
+        .theme-dark & {
+            background-color: $color--black;
+        }
+
+        .theme-light & {
+            background-color: $color--white;
+        }
+
+    }
+
     &__notch-block {
         @include media-query(medium) {
             position: relative;
