--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
@@ -1,28 +1,33 @@
 <section class="section bg bg--dark">
-    <div class="section__container ">
-        <div class="stat-block grid">
+    <div class="section__container stat-block">
+        <div class="stat-block__header grid">
             <h3 class="stat-block__heading heading heading--three">{{heading}}</h3>
-            {% for stat in stats %}
+        </div>
+        {% for stat in stats %}
+            <div class="stat-block__item-container grid">
                 <div class="stat-block__item">
+
                     <div class="stat-block__number-container">
                         {% if stat.before %}
                             <span class="stat-block__before">{{stat.before}}</span>
                         {% endif %}
-                        <h4 class="stat-block__number">
+                        <h4 class="stat-block__number {% if stat.number == 1 %}stat-block__number--thin{% endif %}">
                             {{stat.number}}
                         </h4>
                         {% if stat.after %}
                             <span class="stat-block__after">{{stat.after}}</span>
                         {% endif %}
                     </div>
+
                     {% if stat.meta %}
                         <p class="stat-block__meta heading heading--five">{{stat.meta}}</p>
                     {% endif %}
+
                     {% if stat.body %}
                         <p class="stat-block__body body body--one">{{stat.body}}</p>
                     {% endif %}
                 </div>
-            {% endfor %}
-        </div>
+            </div>
+        {% endfor %}
     </div>
 </section>
